# ownfoil-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile.dev  README.md  compose.dev.yaml
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
ownfoil-rs/: Cargo.toml  PARITY_NOTES.md  README.md  auth.example.toml
ownfoil-rs/src/: auth.rs  catalog.rs  config.rs  http.rs  main.rs  scanner.rs  serve_files.rs  titledb.rs
ownfoil-rs/src/http/: admin.html  auth.rs  error.rs  handlers.rs  login.html  mod.rs  responses.rs  settings.html  settings.rs  state.rs  tests.rs
scripts/: setup-hooks.sh
