[package]
name = "ownfoil-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Barebones CyberFoil-compatible Tinfoil game server in Rust"
readme = "README.md"
license = "MIT"
keywords = ["tinfoil", "cyberfoil", "shop", "switch", "server"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["json", "macros"] }
clap = { version = "4.5", features = ["derive"] }
mime_guess = "2.0"
percent-encoding = "2.3"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.45", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
axum-test = "18.2"
tempfile = "3.17"
